# ComfyUI_ExtendedImageFormats

./: README.md  __init__.py  extended_image_formats.py  pyproject.toml  requirements.txt
web/: exifr.js  extended_image_formats.js
